[package]
name = "pulse-sc"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Alin-Marius Cruceat <alin.cruceat@multiversx.com>"]

[lib]
path = "src/pulse_sc.rs"

[dependencies.multiversx-sc]
version = "0.60.0"

[dependencies.multiversx-sc-modules]
version = "0.60.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.60.0"

[features]
chain-simulator-tests = []

[workspace]
members = [".", "meta", "interactor"]
